--- a/style.css
+++ b/style.css
@@ -5,27 +5,19 @@
 }
 
 body {
-  background-color: rgb(235, 235, 235);
   font-family: 'Roboto', sans-serif;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
+  background: rgb(235, 235, 235);
+  padding: 0;
   margin: 0;
 }
 
 .container {
-  display: flex;
-  width: 800px;
+  margin: 30px auto;
+  width: 500px;
 }
 
-.incomeContainer,
-.expenseContainer {
-  display: flex;
-  flex-direction: column;
-  width: 400px;
-  height: 30vh;
+.heading1 {
+  text-align: center;
 }
 
 .displayContainer {
@@ -36,9 +28,16 @@ body {
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  width: 450px;
   padding: 20px;
   margin: 20px;
+}
+
+.incomeContainer,
+.expenseContainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .error,
@@ -48,6 +47,12 @@ body {
   font-weight: bold;
   display: none;
   z-index: 1009;
+}
+
+#form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .overlay {
@@ -66,6 +71,16 @@ body {
   border: none;
   border-top: 1px dotted #f00;
   width: 75%;
+}
+
+.expenseDisplayName,
+.incomeDisplayName {
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 100%;
+  margin: 20px 0;
 }
 
 .expenseDisplayName ul,
@@ -167,13 +182,6 @@ input::-webkit-inner-spin-button {
   color: red;
 }
 
-.chewy {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
 @media (max-width: 1024px) {
   .break {
     display: none;
@@ -196,19 +204,12 @@ input::-webkit-inner-spin-button {
 }
 
 @media (max-width: 480px) {
-  .chewy {
-    display: flex;
-    flex-direction: column;
-    margin: 20px auto;
-    width: 100%;
-  }
   .container {
     display: flex;
-    align-items: center;
-    padding: 15px;
-    margin: 20px;
+    flex-direction: column;
     width: 100%;
   }
+
   .heading1 {
     margin-top: 20px;
     font-size: 26px;
@@ -231,7 +232,11 @@ input::-webkit-inner-spin-button {
     justify-content: center;
     align-items: center;
   }
-  .expenseDisplayName {
+  .expenseDisplayName,
+  .incomeDisplayName {
+    width: 90%;
+    margin: auto;
+    padding: 0;
   }
   .expenseContainer,
   .incomeContainer {
