--- a/style.css
+++ b/style.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
+:root {
+  --box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0.24);
+}
+
 * {
   box-sizing: border-box;
 }
@@ -19,11 +23,15 @@ body {
 .heading1 {
   text-align: center;
 }
+/* .heading2 {
+  display: flex;
+  flex-direction: column;
+} */
 
 .displayContainer {
   background-color: rgb(255, 255, 255);
   border-radius: 7px;
-  box-shadow: 12px 10px 25px -17px rgb(0, 0, 0);
+  box-shadow: var(--box-shadow);
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -76,12 +84,12 @@ body {
 
 .expenseDisplayName,
 .incomeDisplayName {
-  padding: 20px;
+  padding: 0;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  width: 100%;
-  margin: 20px 0;
+  width: 90%;
+  margin: auto;
 }
 
 .expenseDisplayName ul,
@@ -92,7 +100,7 @@ body {
   padding: 0;
   margin: 3px 0px;
   justify-content: space-between;
-  box-shadow: 12px 10px 25px -17px rgb(0, 0, 0);
+  box-shadow: var(--box-shadow);
   border-radius: 5px;
 }
 .expenseDisplayName ul:hover,
@@ -124,7 +132,7 @@ body {
   color: white;
   border: none;
   outline: none;
-  margin: 1rem;
+  margin: 0.3rem;
   width: 100px;
   height: 35px;
   border-radius: 3px;
@@ -143,7 +151,8 @@ body {
   color: white;
   border: none;
   outline: none;
-  margin: 1rem;
+  margin: 0.3rem;
+  margin-bottom: 1rem;
   width: 100px;
   height: 35px;
   border-radius: 3px;
@@ -171,8 +180,20 @@ input::-webkit-inner-spin-button {
 
 .incExpContainer {
   display: flex;
-  width: 100%;
+  width: 80%;
   justify-content: space-between;
+}
+
+.heading4 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* flex-direction: column; */
+  width: 50%;
+}
+
+.heading4:first-child {
+  border-right: 1px solid #dedede;
 }
 
 .incomeTotal {
@@ -233,12 +254,12 @@ input::-webkit-inner-spin-button {
     justify-content: center;
     align-items: center;
   }
-  .expenseDisplayName,
+  /* .expenseDisplayName,
   .incomeDisplayName {
     width: 90%;
     margin: auto;
     padding: 0;
-  }
+  } */
   .expenseContainer,
   .incomeContainer {
     display: flex;
