--- a/style.css
+++ b/style.css
@@ -268,6 +268,9 @@ input::-webkit-inner-spin-button {
     margin: auto;
     align-items: center;
   }
+  .heading4:first-child {
+    border-right: none;
+  }
   .heading3 {
     font-size: 13px;
   }
