--- a/style.css
+++ b/style.css
@@ -200,9 +200,13 @@ h2 {
   color: #333;
 }
 
+.launchIncomeBtn {
+  background-color: rgb(137, 199, 165);
+}
+
 .sortIncBtn,
 .sortExpBtn {
-  background-color: rgba(195, 121, 255, 0.616);
+  background-color: rgba(221, 93, 238, 0.39);
   color: white;
   border: none;
   outline: none;
